--- a/AstolfoRPC/AstolfoRPC.csproj
+++ b/AstolfoRPC/AstolfoRPC.csproj
@@ -16,6 +16,9 @@
       <None Update="lyrics.json">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="config.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
