--- a/.github/workflows/dotnet-build-linux.yml
+++ b/.github/workflows/dotnet-build-linux.yml
@@ -18,3 +18,9 @@ jobs:
         run: dotnet restore
       - name: Build
         run: dotnet build --configuration Release --no-restore
+      - name: Package Executable
+        run: dotnet publish --configuration Release --no-build --no-restore --output ./publish
+        uses: actions/upload-artifact@v3
+        with:
+          name: executable
+          path: ./publish
