--- a/.github/workflows/dotnet-build-linux.yml
+++ b/.github/workflows/dotnet-build-linux.yml
@@ -22,4 +22,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: executable
-          path: ./AstolfoRPC/bin/Release/net6.0/publish
+          path: AstolfoRPC/bin/Release/net6.0/publish
